till useState hook

--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRACTICE</title>
+    <link rel="stylesheet" href="./index.css" />
+    <title>Food App</title>
 </head>
 <body>
     <div id="root"></div>
-    <script>
-        const heading= document.createElement("h1"); 
-        heading.innerHTML="HELLO"; //it is used to write in html
-
-        const root=document.getElementById("root"); //it gets the html element with id=root  
-        root.appendChild(heading);  //it appends the heading as the child of the root
+    <script type="module" src="./src/index.js">
     </script>
 </body>
 </html>
